--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -22,7 +22,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="logo-box logo--box">
-                            <a href="index.html" class="logo"><img src="{% static 'images/logo.png' %}" alt="لوگو"/></a>
+                            <a href="{% url 'main_app:index' %}" class="logo">
+                                <img src="{% static 'images/logo.png' %}" alt="لوگو"/>
+                            </a>
                             <div class="user-btn-action">
                                 <div class="search-menu-toggle icon-element icon-element-sm shadow-sm mr-2"
                                      data-toggle="tooltip" data-placement="top" title="جستجو کردن">
@@ -420,7 +422,7 @@
         </div>
 
         <div class="logo-box px-4">
-            <a href="index.html" class="logo"><img src="{% static 'images/logo.png' %}" alt="لوگو"/></a>
+            <a href="{% url 'main_app:index' %}" class="logo"><img src="{% static 'images/logo.png' %}" alt="لوگو"/></a>
         </div>
         <ul class="generic-list-item off-canvas-menu-list off--canvas-menu-list pt-35px">
 
@@ -461,30 +463,32 @@
                     مقاله ها
                 </a>
             </li>
+            {% if request.user.is_superuser %}
+                <li>
+                    <a href="{% url 'userprofile_app:group_list' %}">
+                        <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
+                            <path d="M0 0h24v24H0V0z" fill="none"></path>
+                            <path
+                                    d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
+                            ></path>
+                        </svg>
+                        گروه ها و مجوزها
+                    </a>
+                </li>
 
-            <li>
-                <a href="{% url 'userprofile_app:group_list' %}">
-                    <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
-                        <path d="M0 0h24v24H0V0z" fill="none"></path>
-                        <path
-                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
-                        ></path>
-                    </svg>
-                    گروه ها و مجوزها
-                </a>
-            </li>
+                <li>
+                    <a href="{% url 'userprofile_app:user_list' %}">
+                        <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
+                            <path d="M0 0h24v24H0V0z" fill="none"></path>
+                            <path
+                                    d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
+                            ></path>
+                        </svg>
+                        کاربران
+                    </a>
+                </li>
+            {% endif %}
 
-            <li>
-                <a href="{% url 'userprofile_app:user_list' %}">
-                    <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
-                        <path d="M0 0h24v24H0V0z" fill="none"></path>
-                        <path
-                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
-                        ></path>
-                    </svg>
-                    کاربران
-                </a>
-            </li>
 
         </ul>
     </div>
