--- a/userprofile_app/templates/userprofile_app/articles/article_list.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_list.html
@@ -6,6 +6,7 @@
 {% block content %}
 
     <div class="dashboard-content-wrap">
+
         <div class="dashboard-menu-toggler btn theme-btn theme-btn-sm lh-28 theme-btn-transparent mb-4 ml-3"><i
                 class="la la-bars mr-1"></i> منو
         </div>
@@ -15,9 +16,10 @@
 
             <!-- breadcrumb -->
             <div class="breadcrumb-content d-flex flex-wrap align-items-center justify-content-between mb-5">
+                <!-- user avatar -->
                 <div class="media media-card align-items-center">
                     <div class="media-img media--img media-img-md rounded-full">
-                        <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر کوچک دانش آموز">
+                        <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر کوچک">
                     </div>
                     <div class="media-body">
                         <h2 class="section__title fs-30">{{ request.user.get_full_name }}</h2>
@@ -35,6 +37,7 @@
                     </div>
                 </div>
 
+                <!-- create new article -->
                 <a href="{% url 'userprofile_app:article_create' %}" class="btn btn-info d-inline-flex align-items-center new-article-btn"
                    style="background-color: #e3f2fd; color: #1976d2; border-color: #b3e5fc; font-weight: bold;">
                     <i class="la la-plus mr-2"></i><span style="font-weight: bold;">ایجاد مقاله جدید</span>
@@ -45,6 +48,8 @@
             <!-- article section -->
             <div class="section-block mb-5"></div>
             <div class="dashboard-heading mb-5">
+
+                <!-- articles count -->
                 <h3 class="fs-22 font-weight-semi-bold">
                     لیست مقالات
                     <span class="badge badge-primary pr-3 pl-3 pt-2 pb-2"
@@ -70,6 +75,7 @@
                     <tbody>
                     {% for article in article_list %}
                         <tr>
+
                             <th scope="row">
                                 <a href="{% url 'blog_app:blog_detail' pk=article.id %}" class="text-black">{{ article.title }}</a>
                             </th>
@@ -100,28 +106,28 @@
 
                             <td>
                                 <div class="card-action-wrap d-flex">
-                                    <!-- مشاهده -->
+                                    <!-- view -->
                                     <a href="{% url 'blog_app:blog_detail' pk=article.id %}"
                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success"
                                        data-toggle="tooltip" title="مشاهده">
                                         <i class="la la-eye"></i>
                                     </a>
 
-                                    <!-- ویرایش -->
+                                    <!-- update -->
                                     <a href="{% url 'userprofile_app:article_edit' pk=article.id %}"
                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-warning"
                                        data-toggle="tooltip" title="ویرایش">
                                         <i class="la la-edit"></i>
                                     </a>
 
-                                    <!-- حذف -->
+                                    <!-- delete -->
                                     <a href="{% url 'userprofile_app:article_delete' pk=article.id %}"
                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
                                        data-toggle="tooltip" title="حذف">
                                         <i class="la la-trash"></i>
                                     </a>
 
-                                    <!-- فرم تغییر وضعیت -->
+                                    <!-- confirm -->
                                     <form action="{% url 'userprofile_app:article_change_status' article.pk %}"
                                           method="post" style="display:inline;">
                                         {% csrf_token %}
